Closed Bug 1246886 Opened 10 years ago Closed 10 years ago

[Static Analysis][Uninitialized scalar field] In function InterruptFrame(InterruptFrame&& aOther)

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1352026 )

Attachments

(1 file)

The Static Analysis tool Coverity added that member mMoved is not initialized in the move constructor. The path that the move constructor gets called is: >> if (!mThat.mCxxStackFrames.append(InterruptFrame(direction, msg))) >> MOZ_CRASH(); The aOther object will have mMoved initialized by constructor InterruptFrame(Direction direction, const Message* msg) but when calling the move constructor the value of mMoved will not be passed to the new object.
Comment on attachment 8717355 [details] MozReview Request: Bug 1246886 - initialize mMoved in move contructor. r?billm https://reviewboard.mozilla.org/r/34143/#review30859
Attachment #8717355 - Flags: review?(wmccloskey) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: