Bug 1246886 - initialize mMoved in move contructor. r=billm

--HG--
extra : rebase_source : b11a58da8d930c768b4500913c2ac303c7425ee8